add authorize header for swagger
